# zero2prod

./: .env  Cargo.toml  Dockerfile  Dockerfile.init  configuration.test.yaml  configuration.yaml  docker-compose.yaml  entrypoint.sh  init-db.ps1  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-70ea39307a39c1d5e837193a30e38e527abe12921e7b6bb7f77a8569ac06246f.json  query-b6b920153b61cbd20f0f8cd901a1a21bb59f9d36c15df3b344894f7220d3c6ba.json
configuration/: base.yaml  production.yaml  test.yaml
migrations/: 20240226152839_make_status_not_null_in_subscriptions.sql  20240226153011_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
