[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
reqwest = "0.11.24"
config = "0.13"
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
tracing-subscriber = { version = "0.3.18", features = ["serde", "serde_json", "chrono", "tracing", "env-filter", "json", "time", "registry"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
