[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
config = "0.13"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
tracing-subscriber = { version = "0.3.18", features = ["serde", "serde_json", "chrono", "tracing", "env-filter", "json", "time", "registry"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1"
claims = "0.7"
validator = "0.16"
base64 = "0.21.7"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.6.0"
linkify = "0.9"

[dependencies.reqwest]
version = "0.11.24"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
